--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -1,4 +1,5 @@
 :root {
 --main-color: #11b89c;
+--main-bg-image: linear-gradient(to right top, #0c937c, #32a28c, #4bb19d, #62c0ae, #77cfbf, #78d2c2, #79d6c5, #7ad9c8, #67d1bd, #52c9b2, #39c0a7, #11b89c);
 }
 
