--- a/src/sass/blocks/button.scss
+++ b/src/sass/blocks/button.scss
@@ -4,5 +4,19 @@
         width: 230px;
         height: 65px;
         font-size: 20px;
+        border-radius: 45px;
+        background-color: transparent;
+        box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+        color: black;
+        border: none;
+        transition: all 0.3s ease 0s;
+        border: 1px solid #2ee59d;
+        &:hover {
+            cursor: pointer;
+            background-color: #2EE59D;
+            box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+            color: #fff;
+            transform: translateY(-7px);
+        }
     }
 }
