--- a/src/sass/blocks/link.scss
+++ b/src/sass/blocks/link.scss
@@ -1,14 +1,20 @@
 .link {
     &__form {
         display: none;
-        background-color: var(--main-color);
-        width: 230px;
-        height: 50px;
         margin: 0 auto;
-        border-radius: 10px;
         text-align: center;
         padding: 15px;
         text-decoration: none;
-        color: white;
+        color: black;
+        border: 2px solid #2EE59D;
+        height: 50px;
+        width: 200px;
+        transition: all 0.3s ease 0s;
+        border-radius: 5px;
+        &:hover {
+            background-color: #2EE59D;
+            color: white;
+        }
     }
 }
+
