--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -4,7 +4,8 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Popins', sans-serif;
+    // font-family: 'Popins', sans-serif;
+    font-family: 'DejaVu Sans Mono', monospace;
     box-sizing: border-box;
 }
 
@@ -15,12 +16,18 @@
 }
 
 body {
-    background-color: var(--main-color);
+    background-image: var(--main-bg-image);
+    background-position: center center;
+    background-repeat: no-repeat;
 }
 
+html, body {
+    height: 100%;
+}
 
 @import 'blocks/block';
 @import 'blocks/button';
 @import 'blocks/number';
 @import 'blocks/link';
+@import 'blocks/media';
 
